--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
@@ -11,7 +10,7 @@
         <meta http-equiv="content-language" content="en-US" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>fluuu.id</title>
+        <title>FLUUUID | london digital creative collective</title>
 
         <meta name="robots" content="all" />
         <meta name="description" content="fluuu.id is a collective of developers, designers and creative technologists striving for cutting edge experiences online and offline.">
@@ -39,6 +38,7 @@
         <link rel="stylesheet" href="/css/site.css">
     </head>
     <body>
+        
         <script src="/js/v.js"></script>
         <script src="/js/wagner/Wagner.js"></script>
         <script src="/js/wagner/Wagner.base.js"></script>
@@ -275,18 +275,88 @@
         }
 
     </script>
-
       <script src="/js/main.js"></script>
-
         <div id="wrapper">
-            <div class="table">
-                <div class="row">
-                    <div class="cell">
-                        <img src="/img/fluuuid.svg" alt="FLUUUID">
-                        <p><a href="mailto:heeey@fluuu.id">heeey@fluuu.id</a></p>
+            <section id="splash">
+                <div class="table">
+                    <div class="row">
+                        <div class="cell">
+                            <img src="img/fluuuid.svg" alt="FLUUUID" class="logo" />
+                            <h1>london digital creative collective</h1>
+                            <a href="#labs" class="arrow"></a>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </section>
+            <section id="labs">
+                <ul>
+                    <li>
+                        <a href="experiment.html">
+                          <div class="img" style="background-image:url(content/thumb_boxphysics.jpg)"></div>
+                          <div class="table">
+                              <div class="row">
+                                  <div class="cell">
+                                      <h2>Box Physics</h2>
+                                      <h3>WebGL Shader</h3>
+                                      <span class="arrow"></span>
+                                  </div>
+                              </div>
+                          </div>
+                        </a>    
+                    </li>
+                    <li>
+                        <a href="experiment.html">
+                          <div class="img" style="background-image:url(content/thumb_tubes.jpg)"></div>
+                          <div class="table">
+                              <div class="row">
+                                  <div class="cell">
+                                      <h2>Tubes</h2>
+                                      <h3>WebGL Shader</h3>
+                                      <span class="arrow"></span>
+                                  </div>
+                              </div>
+                          </div>
+                        </a>    
+                    </li>
+                    <li>
+                        <a href="experiment.html">
+                          <div class="img" style="background-image:url(content/thumb_particles.jpg)"></div>
+                          <div class="table">
+                              <div class="row">
+                                  <div class="cell">
+                                      <h2>Particles</h2>
+                                      <h3>WebGL Shader</h3>
+                                      <span class="arrow"></span>
+                                  </div>
+                              </div>
+                          </div>
+                        </a>    
+                    </li>
+                    <li>
+                        <a href="experiment.html">
+                          <div class="img" style="background-image:url(content/thumb_phongdistortion.jpg)"></div>
+                          <div class="table">
+                              <div class="row">
+                                  <div class="cell">
+                                      <h2>Phong Distortion</h2>
+                                      <h3>WebGL Shader</h3>
+                                      <span class="arrow"></span>
+                                  </div>
+                              </div>
+                          </div>
+                        </a>    
+                    </li>
+                </ul>
+            </section>
+            <section id="footer">
+                <div class="table">
+                    <div class="row">
+                        <div class="cell">
+                            <a href="mailto:heeey@fluuu.id">heeey@fluuu.id</a>
+                        </div>
+                    </div>
+                </div>  
+            </section>
         </div>
     </body>
 
